--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head> 
         <meta charset="UTF-8" />
         <title>Run Buddy</title>
-        <link rel="stylesheet" href="./assets/css/style.css" />
+        <link rel="stylesheet" href="./assets/style.css" />
     </head>
     <body>
        <!--Navigation-->
@@ -26,7 +26,7 @@
                        <a href="#your-trainers">Your Trainers</a>
                    </li>
                    <li>
-                       <a href="#reach-out"></a>
+                       <a href="#reach-out">Reach Out</a>
                    </li>
                </ul>
            </nav>
