--- a/index.html
+++ b/index.html
@@ -86,12 +86,12 @@
                <p>Are you here to build muscle, lose weight, or just feel good?</p>
            </div>
            <div>
-               <img src=".assets/images/step-3.svg" alt="" />
+               <img src="./assets/images/step-3.svg" alt="" />
                <h3>Step 3: Get Running.</h3>
                <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
            </div>
            <div>
-               <img src=".assets/images/step-4.svg" alt="" />
+               <img src="./assets/images/step-4.svg" alt="" />
                <h3>Step 4: See Results.</h3>
                <p>Bi-weekly checkins with your trainer will help keep you focused</p>
            </div>
