--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
        <section id="what-we-do" class="intro">
            <h2 class="section-title primary-border">What We Do</h2>
            <p>
-               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis modi beatae veritatis do
+               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa, quasi et tenetur nobis veritatis sint incidunt eaque odit eligendi repellendus fugit rem nesciunt dolore pariatur. Voluptate, sapiente! Labore, ducimus reprehenderit.
            </p>
        </section>
        <!--"what you do" section-->
@@ -96,13 +96,63 @@
                <p>Bi-weekly checkins with your trainer will help keep you focused</p>
            </div>
        </section>
+
        <!--"meet the trainers" section-->
-       <section>
-           <h2>Meet The Trainers</h2>
+       <section id="your-trainers" class="trainers">
+           <h2 class="section-title primary-border">
+               Meet The Trainers
+            </h2>
+            <article class="trainer">
+                <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+                <div class="trainer-bio text-left">
+                    <h3>Arron Stephens</h3>
+                    <h4>Speed / Strength</h4>
+                    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor sed aspernatur aliquid nobis earum! Quia hic harum aliquam ad expedita suscipit ex veniam amet. At maiores vero odio delectus modi.</p>
+                </div>
+            </article>
+            <article class="trainer">
+                <div class="trainer-bio text-right">
+                    <h3>Joanne Jill</h3>
+                    <h4>Endurance</h4>
+                    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut sapiente a dolorem soluta! Commodi tempore ea expedita, illum quas doloremque, optio dicta recusandae dolor in sapiente maiores nisi minima nihil.</p>
+                </div>
+                <img src="./assets/images/trainer-2.jpg" alt="Joanne Jill, ready for endurance training" />
+            </article>
+            <article class="trainer">
+                <img src="./assets/images/trainer-3.jpg" alt="headband harry lifting crazy weights" />
+                <div class="trainer-bio text-left">
+                    <h3>Harry "The Headband" Smith</h3>
+                    <h4>Strength</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis modi dolorum optio tempore non velit corrupti sit praesentium deserunt, voluptas repellendus quo. Soluta quo ipsa facilis similique libero culpa illum?</p>
+                </div>
+            </article>
        </section>
+
        <!--"reach out" section-->
        <section>
-           <h2>Reach Out</h2>
+           <h2>
+               Reach Out
+            </h2>
+            <div class="contact-info">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d23277.917093678738!2d-89.08047257692868!3d43.17298911498882!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880660276d8b29c1%3A0xfbc418c0eaa6cb10!2sKWIK%20TRIP%20%23721!5e0!3m2!1sen!2sus!4v1629906682966!5m2!1sen!2sus" 
+                width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy">
+                </iframe>
+            </div>
+            <div>
+                <h3>Run Buddy</h3>
+                <p>
+                    Any questions or concerns before signing up?
+                    <br />
+                    Let us know and we'll be happy to talk to you!
+                </p>
+                <address>
+                    55 Main Street <br/>
+                    Some Town, Ca <br/>
+                    12345<br/>
+                    P: 555.RUN.BUDZ (555.786.2839)<br/>
+                    E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+                </address>
+            </div>
        </section>
        <!--footer-->
        <footer>
