minor html tweak

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       
        <!--hero/jumbotron-->
        <section class="hero">
-           <div class="hero-form">
+           <main class="hero-form">
                <h3>Get Started Today</h3>
                <p>Fill out this form and one of our trainers will schedule a consult</p>
                <form>
@@ -61,7 +61,7 @@
                        Get Running!
                    </button>
                 </form>
-           </div>
+            </main>
        </section>
 <!-- end hero-->
 
