--- a/index.html
+++ b/index.html
@@ -141,6 +141,18 @@
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d23277.917093678738!2d-89.08047257692868!3d43.17298911498882!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880660276d8b29c1%3A0xfbc418c0eaa6cb10!2sKWIK%20TRIP%20%23721!5e0!3m2!1sen!2sus!4v1629906682966!5m2!1sen!2sus" 
                 style="border:0;" allowfullscreen="" loading="lazy">
                 </iframe>
+                <div class="contact-form">
+                    <h3>Contact Us</h3>
+                    <form>
+                       <label for="contact-name">Your Name</label>
+                       <input type="text" id="contact-name" placeholder="Your Name" />
+                  
+                       <label for="contact-message">Message</label>
+                       <textarea id="contact-message" placeholder="Message"></textarea>
+                  
+                       <button type="submit">Submit</button>
+                      </form>
+                </div>
                 <div>
                 <h3>Run Buddy</h3>
                 <p>
