--- a/index.html
+++ b/index.html
@@ -73,14 +73,20 @@
 
        <!--"what we do" section-->
        <section id="what-we-do" class="intro">
-           <h2 class="section-title primary-border">What We Do</h2>
-           <p>
-               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa, quasi et tenetur nobis veritatis sint incidunt eaque odit eligendi repellendus fugit rem nesciunt dolore pariatur. Voluptate, sapiente! Labore, ducimus reprehenderit.
-           </p>
-       </section>
+           <div class="flex-row">
+                <h2 class="section-title primary-border">What We Do</h2>
+           </div>
+           <div class="flex-row">
+                <p>
+                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa, quasi et tenetur nobis veritatis sint incidunt eaque odit eligendi repellendus fugit rem nesciunt dolore pariatur. Voluptate, sapiente! Labore, ducimus reprehenderit.
+                </p>
+           </div>
+        </section>
        <!--"what you do" section-->
        <section id="what-you-do" class="steps">
-           <h2 class="section-title secondary-border">What You Do</h2>
+           <div class="flex-row">
+                <h2 class="section-title secondary-border">What You Do</h2>
+           </div>
            <div>
                <img src="./assets/images/step-1.svg" alt="" />
                <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
@@ -105,9 +111,11 @@
 
        <!--"meet the trainers" section-->
        <section id="your-trainers" class="trainers">
-           <h2 class="section-title primary-border">
-               Meet The Trainers
-            </h2>
+           <div class="flex-row">
+                <h2 class="section-title primary-border">
+                   Meet The Trainers
+                </h2>
+            </div>
             <article class="trainer">
                 <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
                 <div class="trainer-bio text-left">
