--- a/index.html
+++ b/index.html
@@ -140,36 +140,38 @@
        </section>
 
        <!--"meet the trainers" section-->
-       <section id="your-trainers" class="trainers">
+       <section id="your-trainers">
            <div class="flex-row">
                 <h2 class="section-title primary-border">
                    Meet The Trainers
                 </h2>
             </div>
-            <article class="trainer">
-                <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
-                <div class="trainer-bio text-left">
-                    <h3>Arron Stephens</h3>
-                    <h4>Speed / Strength</h4>
-                    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor sed aspernatur aliquid nobis earum! Quia hic harum aliquam ad expedita suscipit ex veniam amet. At maiores vero odio delectus modi.</p>
-                </div>
-            </article>
-            <article class="trainer">
-                <div class="trainer-bio text-right">
-                    <h3>Joanne Jill</h3>
-                    <h4>Endurance</h4>
-                    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut sapiente a dolorem soluta! Commodi tempore ea expedita, illum quas doloremque, optio dicta recusandae dolor in sapiente maiores nisi minima nihil.</p>
-                </div>
-                <img src="./assets/images/trainer-2.jpg" alt="Joanne Jill, ready for endurance training" />
-            </article>
-            <article class="trainer">
-                <img src="./assets/images/trainer-3.jpg" alt="headband harry lifting crazy weights" />
-                <div class="trainer-bio text-left">
-                    <h3>Harry "The Headband" Smith</h3>
-                    <h4>Strength</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis modi dolorum optio tempore non velit corrupti sit praesentium deserunt, voluptas repellendus quo. Soluta quo ipsa facilis similique libero culpa illum?</p>
-                </div>
-            </article>
+            <div class="trainers">
+                <article class="trainer">
+                    <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+                    <div class="trainer-bio text-left">
+                        <h3>Arron Stephens</h3>
+                        <h4>Speed / Strength</h4>
+                        <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor sed aspernatur aliquid nobis earum! Quia hic harum aliquam ad expedita suscipit ex veniam amet. At maiores vero odio delectus modi.</p>
+                    </div>
+                </article>
+                <article class="trainer">
+                    <img src="./assets/images/trainer-2.jpg" alt="Joanne Jill, ready for endurance training" />
+                    <div class="trainer-bio text-right">
+                        <h3>Joanne Jill</h3>
+                        <h4>Endurance</h4>
+                        <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut sapiente a dolorem soluta! Commodi tempore ea expedita, illum quas doloremque, optio dicta recusandae dolor in sapiente maiores nisi minima nihil.</p>
+                    </div>
+                </article>
+                <article class="trainer">
+                    <img src="./assets/images/trainer-3.jpg" alt="headband harry lifting crazy weights" />
+                    <div class="trainer-bio text-left">
+                        <h3>Harry "The Headband" Smith</h3>
+                        <h4>Strength</h4>
+                        <p>Lorem praesentium deserunt, voluptas repellendus quo. Soluta quo ipsa facilis similique libero culpa illum?</p>
+                    </div>
+                </article>
+            </div>
        </section>
 
        <!--"reach out" section-->
